<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/banner_header" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/main_padding">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardStatus_create_update_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10"
                android:foreground="@drawable/ripple_rectangle_blue"
                app:cardBackgroundColor="@color/background"
                app:cardElevation="@dimen/dimen_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/main_padding">

                    <TextView
                        style="@style/Text_Normal_default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_status_title" />

                    <TextView
                        android:id="@+id/tvStatus_create_update_product"
                        style="@style/Text_Bold_xlarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_" />

                    <TextView
                        android:id="@+id/tvStatusComment_create_update_product"
                        style="@style/Text_Bold_default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:text="@string/default_"
                        android:textColor="@color/red" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfTitle_create_update_product"
                style="@style/TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:hint="@string/product_title">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Text_Normal_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textAlignment="viewStart" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfDescription_create_update_product"
                style="@style/TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:hint="@string/product_description">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Text_Normal_default"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_200"
                    android:inputType="textMultiLine"
                    android:maxLength="2000"
                    android:textAlignment="viewStart" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/spinnerCategory_create_update_product"
                    style="@style/Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/product_category" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/spinnerCity_create_update_product"
                    style="@style/Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/main_padding"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/city" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLocation_create_update_product"
                style="@style/Button_Normal_default_no_back_bordered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:drawableEnd="@drawable/ic_location"
                android:onClick="onClick"
                android:text="@string/product_location" />

            <LinearLayout
                android:id="@+id/layoutAttachments_create_update_product"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_20"
                android:orientation="vertical">

                <TextView
                    style="@style/Text_Bold_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_attachments" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/RVAttachments_create_update_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_padding"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCreateUpdate_create_update_product"
            style="@style/Button_Bold_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foreground="@drawable/ripple_rectangle_blue_radius_10"
            android:onClick="onClick"
            android:text="@string/createUpdateProduct" />

        <Button
            android:id="@+id/btnSubmitProduct_create_update_product"
            style="@style/Button_Bold_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_padding"
            android:layout_weight="1"
            android:foreground="@drawable/ripple_rectangle_blue_radius_10"
            android:onClick="onClick"
            android:text="@string/submitProduct" />
    </LinearLayout>

    <Button
        android:id="@+id/btnShowTrips_create_update_product"
        style="@style/Button_Bold_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_padding"
        android:foreground="@drawable/ripple_rectangle_blue_radius_10"
        android:onClick="onClick"
        android:text="@string/product_show_trips" />

</LinearLayout>