<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/banner_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/main_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/Text_Bold_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_date" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfStartDate_add_trip"
                        style="@style/TextInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/trip_start_date">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/Text_Normal_default"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="text"
                            android:onClick="onClick"
                            android:textAlignment="viewStart" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfEndDate_add_trip"
                        style="@style/TextInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/main_padding"
                        android:layout_weight="1"
                        android:hint="@string/trip_end_date">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/Text_Normal_default"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="text"
                            android:onClick="onClick"
                            android:textAlignment="viewStart" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <TextView
                    style="@style/Text_Bold_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:text="@string/trip_time" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfStartTime_add_trip"
                        style="@style/TextInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/trip_start_time">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/Text_Normal_default"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="text"
                            android:onClick="onClick"
                            android:textAlignment="viewStart" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfEndTime_add_trip"
                        style="@style/TextInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/main_padding"
                        android:layout_weight="1"
                        android:hint="@string/trip_end_time">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/Text_Normal_default"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="text"
                            android:onClick="onClick"
                            android:textAlignment="viewStart" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_padding"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text_Bold_default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_40"
                        android:text="@string/trip_price_class" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/spinnerPriceClass_add_trip"
                        style="@style/Button_Normal_default_no_back_bordered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClick"
                        android:layout_marginTop="@dimen/main_padding"
                        android:text="@string/trip_price_class_standard" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/main_padding"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tfPrice_add_trip"
                            style="@style/TextInput"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/trip_price">

                            <com.google.android.material.textfield.TextInputEditText
                                style="@style/Text_Normal_default"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textAlignment="viewStart" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tfSeats_add_trip"
                            style="@style/TextInput"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/main_padding"
                            android:layout_weight="1"
                            android:hint="@string/trip_seats">

                            <com.google.android.material.textfield.TextInputEditText
                                style="@style/Text_Normal_default"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textAlignment="viewStart" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>


                <TextView
                    android:id="@+id/tvHint_add_trip"
                    style="@style/Text_Bold_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_40"
                    android:text="@string/default_" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSend_add_trip"
                style="@style/Button_Bold_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_50"
                android:foreground="@drawable/ripple_rectangle_blue_radius_10"
                android:onClick="onClick"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>