<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/dimen_5"
    android:weightSum="4">

    <TextView
        android:id="@+id/tvClass_item_trip_price"
        style="@style/Text_Normal_large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:includeFontPadding="false"
        android:text="@string/default_"
        android:textAlignment="viewStart"
        android:textColor="@color/blue_light" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPrice_item_trip_price"
            style="@style/Text_Bold_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_" />

        <TextView
            style="@style/Text_Normal_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/riyal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTotalSeats_item_trip_price"
            style="@style/Text_Bold_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_" />

        <TextView
            style="@style/Text_Normal_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/total_seats" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvBookedSeats_item_trip_price"
            style="@style/Text_Bold_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/default_" />

        <TextView
            style="@style/Text_Normal_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reserved_seats" />

    </LinearLayout>
</LinearLayout>


